fixes to content

--- a/pages/components.html
+++ b/pages/components.html
@@ -429,6 +429,6 @@ permalink: "components.html"
 <h2 id="CSS-style-shortcuts">CSS style shortcuts</h2>
 <p>
   Enhance the design and appeal of your web pages with our
-  <a href="/get-started/css-classes-shortcuts/">CSS style shortcuts</a>
-  . Add CSS units to format page layout, colors, and fonts.
+  <a href="/get-started/css-classes-shortcuts/">CSS style shortcuts</a>. Add CSS
+  units to format page layout, colors, and fonts.
 </p>
