--- a/pages/contact-us-form.html
+++ b/pages/contact-us-form.html
@@ -147,9 +147,8 @@ permalink: "contact-us.html"
   To provide State Web Template V6 code level feedback, visit our
   <a
     href="https://github.com/Office-of-Digital-Services/California-State-Web-Template-Development">
-    State Web Template GitHub Development Repo
-  </a>
-  .
+    State Web Template GitHub Development Repo </a
+  >.
 </p>
 
 <h2>Subscribe to our network</h2>
