--- a/pages/privacy-policy.html
+++ b/pages/privacy-policy.html
@@ -75,9 +75,8 @@ permalink: "privacy-policy.html"
   <li>
     <span class="bold">
       The Department of Technology collects personal information on individuals
-      only as allowed by law
-    </span>
-    . The Department limits the collection of personal information to what is
+      only as allowed by law </span
+    >. The Department limits the collection of personal information to what is
     relevant and necessary to accomplish its lawful purpose. For example, the
     Department may need to know an individual’s e-mail address or telephone
     number in order to answer the individual’s questions or in order to provide
@@ -87,9 +86,8 @@ permalink: "privacy-policy.html"
     <span class="bold">
       The Department of Technology does not collect home, business or e-mail
       addresses, or account information from persons who simply browse the
-      CA.gov web site
-    </span>
-    . Personal information about individuals is collected through this web site
+      CA.gov web site </span
+    >. Personal information about individuals is collected through this web site
     only if an individual provides such information to the Department
     voluntarily through e-mail, registration forms, or surveys, for example.
     This information will be used to facilitate in responding to the person or
@@ -102,9 +100,8 @@ permalink: "privacy-policy.html"
   <li>
     <span class="bold">
       The Department of Technology uses Google Analytics to help improve the web
-      site
-    </span>
-    . Google tracking cookies may be used to provide information to Google
+      site </span
+    >. Google tracking cookies may be used to provide information to Google
     Analytics. Our web site may use Google Analytics to track web site
     statistics. Google tracking code used by every web site or application that
     employs Google Analytics, stores information that identifies device IP
@@ -239,8 +236,8 @@ permalink: "privacy-policy.html"
   The Department will provide additional explanations of this privacy policy, if
   requested. If any individuals have any further questions about this privacy
   policy, they are encouraged to contact the Department via
-  <a href="mailto:StateInfo@state.ca.gov">email</a>
-  , by phone at (916) 319-9223, or by mail to:
+  <a href="mailto:StateInfo@state.ca.gov">email</a>, by phone at (916) 319-9223,
+  or by mail to:
 </p>
 <p>
   <span class="bold">
