--- a/pages/sample/alert.html
+++ b/pages/sample/alert.html
@@ -14,8 +14,7 @@ permalink: "components/alert.html"
 </p>
 <p>
   The alert is a band that extends across the width of the
-  <a href="/structure/utility-header.html">utility header</a>
-  .
+  <a href="/structure/utility-header.html">utility header</a>.
 </p>
 <p>It includes:</p>
 <ul>
