--- a/pages/sample/banner.html
+++ b/pages/sample/banner.html
@@ -198,8 +198,7 @@ permalink: "patterns/banner.html"
 <p>
   Place it at the top of the homepage so it appears below the statewide header,
   site header, and site navigation. Learn more in our guidance on
-  <a href="/structure.html">Webpage structure</a>
-  .
+  <a href="/structure.html">Webpage structure</a>.
 </p>
 <p>
   Include a concise title, description, image, and at least one button. Choose
