--- a/pages/sample/button.html
+++ b/pages/sample/button.html
@@ -40,8 +40,7 @@ permalink: "components/button.html"
 <h2>Sample</h2>
 <p>
   Available button colors are based on your selected
-  <a href="/visual-design/color.html">color theme</a>
-  .
+  <a href="/visual-design/color.html">color theme</a>.
 </p>
 
 <!--TABS-->
