--- a/pages/sample/card-grid.html
+++ b/pages/sample/card-grid.html
@@ -306,9 +306,8 @@ permalink: "patterns/card-grid.html"
     and helps with search engine optimization. Read more about writing alt text
     in
     <a href="https://accessibility.huit.harvard.edu/describe-content-images">
-      Harvard University's digital accessibility guidelines
-    </a>
-    .
+      Harvard University's digital accessibility guidelines </a
+    >.
   </li>
 </ul>
 <h2>Accessibility</h2>
