--- a/pages/sample/css-text-accent.html
+++ b/pages/sample/css-text-accent.html
@@ -54,9 +54,8 @@ permalink: "get-started/css-classes-shortcuts/text-accent-colors.html"
       contrast and may not be accessible. If you change the text color, check to
       make sure there is enough
       <a href="https://accessibleweb.com/color-contrast-checker/">
-        color contrast
-      </a>
-      .
+        color contrast </a
+      >.
     </p>
 
     <h2>Text accent</h2>
