--- a/pages/sample/css-utility-css-classes.html
+++ b/pages/sample/css-utility-css-classes.html
@@ -52,9 +52,8 @@ permalink: "get-started/css-classes-shortcuts/utility-css-classes.html"
       <a
         href="https://www.w3schools.com/bootstrap4/bootstrap_ref_all_classes.asp"
         target="_blank">
-        Bootstrap
-      </a>
-      .
+        Bootstrap </a
+      >.
     </p>
 
     <cagov-accordion>
