--- a/pages/sample/list-of-articles-or-content.html
+++ b/pages/sample/list-of-articles-or-content.html
@@ -146,9 +146,8 @@ permalink: "/patterns/list-of-articles-or-content.html"
   This pattern is related to the
   <a href="/patterns/newsroom.html">Newsroom pattern</a>
   and the
-  <a href="/patterns/article.html">Article pattern</a>
-  . You can use all three patterns to have a cohesive news strategy for your
-  website.
+  <a href="/patterns/article.html">Article pattern</a>. You can use all three
+  patterns to have a cohesive news strategy for your website.
 </p>
 
 <h3>How not to use it</h3>
