--- a/pages/sample/newsroom.html
+++ b/pages/sample/newsroom.html
@@ -249,8 +249,8 @@ permalink: "patterns/newsroom.html"
   <li>For each of the 3 feature images: 275px x 160px</li>
   <li>
     For
-    <a href="/patterns/banner.html#Feature-banner">feature banner</a>
-    : Container maximum width 1176px
+    <a href="/patterns/banner.html#Feature-banner">feature banner</a>: Container
+    maximum width 1176px
   </li>
 </ul>
 <h3>How not to use it</h3>
