--- a/pages/sample/page-navigation.html
+++ b/pages/sample/page-navigation.html
@@ -128,10 +128,10 @@ permalink: "/components/page-navigation.html"
           into your h2 headings. Those IDs will be added automatically based on
           h2 heading text. For instance, if h2 text is "List accordion" the
           corresponding ID attribute will be
-          <code>id="List-accordion"</code>
-          . But if you prefer to use non-automatic page navigation then you will
-          have to add IDs to each h2 heading and add anchor links to those h2
-          headings in your page navigation manually.
+          <code>id="List-accordion"</code>. But if you prefer to use
+          non-automatic page navigation then you will have to add IDs to each h2
+          heading and add anchor links to those h2 headings in your page
+          navigation manually.
         </p>
       </div>
     </div>
