--- a/pages/sample/side-navigation.html
+++ b/pages/sample/side-navigation.html
@@ -125,8 +125,7 @@ permalink: "/components/side-navigation.html"
 <ol>
   <li>
     Go to
-    <a href="/get-started.html">Get started</a>
-    .
+    <a href="/get-started.html">Get started</a>.
   </li>
   <li>From the side navigation, select CSS classes shortcuts.</li>
   <li>Then select Utility CSS classes.</li>
@@ -450,8 +449,8 @@ permalink: "/components/side-navigation.html"
             To add accordion functionality to your side navigation use
             <code>cagov-accordion</code>
             tag with class
-            <code>sidenav</code>
-            . If you want your accordion to be open on default use attribute
+            <code>sidenav</code>. If you want your accordion to be open on
+            default use attribute
             <code>open</code>
             in your
             <code>details</code>
