--- a/pages/sample/structure-search-featured.html
+++ b/pages/sample/structure-search-featured.html
@@ -52,8 +52,7 @@ search: Featured
             or
             <code>navicons-landing.njk</code>
             layouts, since
-            <code>paga.njk</code>
-            ,
+            <code>paga.njk</code>,
             <code>landing.njk</code>
             page layout are already using featured search in their page header
             by default.
