--- a/pages/sample/structure-site-navigation.html
+++ b/pages/sample/structure-site-navigation.html
@@ -175,9 +175,8 @@ permalink: "structure/site-navigation.html"
               <code>&lt;nav&gt;</code>
               element like this
               <code>
-                &lt;nav id="navigation" class="main-navigation singlelevel"&gt;
-              </code>
-              .
+                &lt;nav id="navigation" class="main-navigation singlelevel"&gt; </code
+              >.
             </p>
           </div>
         </div>
@@ -462,9 +461,8 @@ permalink: "structure/site-navigation.html"
               with appropriate ca-gov-icon icon class from our CA Gov icon font
               library. To make an icon bigger use desired font size class such
               as
-              <code>.font-size-40</code>
-              . To display small images on the left or right side of the link
-              use
+              <code>.font-size-40</code>. To display small images on the left or
+              right side of the link use
               <code>.with-image-left</code>
               or
               <code>.with-image-right</code>
