--- a/pages/template-updates.html
+++ b/pages/template-updates.html
@@ -429,7 +429,6 @@ permalink: "template-updates.html"
   Find changelogs for V6 and earlier on the
   <a
     href="https://github.com/Office-of-Digital-Innovation/California-State-Web-Template/releases">
-    GitHub production release page
-  </a>
-  .
+    GitHub production release page </a
+  >.
 </p>
