--- a/pages/accessibility.html
+++ b/pages/accessibility.html
@@ -57,21 +57,19 @@ permalink: "accessibility.html"
     </li>
     <li>
       Create content that can be&nbsp;
-      <strong>presented in different ways</strong>
-      , including by assistive technologies, without losing meaning.
+      <strong>presented in different ways</strong>, including by assistive
+      technologies, without losing meaning.
     </li>
     <li>
       Make it easier for users to&nbsp;
-      <strong>see and hear&nbsp;content</strong>
-      .
+      <strong>see and hear&nbsp;content</strong>.
     </li>
   </ul>
   <h2><strong>2. Operable:</strong></h2>
   <ul>
     <li>
       Make all functionality available from a&nbsp;
-      <strong>keyboard</strong>
-      .
+      <strong>keyboard</strong>.
     </li>
     <li>
       Give users&nbsp;
@@ -80,21 +78,18 @@ permalink: "accessibility.html"
     </li>
     <li>
       Do not use content that causes&nbsp;
-      <strong>seizures</strong>
-      .
+      <strong>seizures</strong>.
     </li>
     <li>
       Help users&nbsp;
-      <strong>navigate and find content</strong>
-      .
+      <strong>navigate and find content</strong>.
     </li>
   </ul>
   <h2><strong>3. Understandable:</strong></h2>
   <ul>
     <li>
       Make text&nbsp;
-      <strong>readable and understandable</strong>
-      .
+      <strong>readable and understandable</strong>.
     </li>
     <li>
       Make content appear and operate in&nbsp;
@@ -102,8 +97,7 @@ permalink: "accessibility.html"
     </li>
     <li>
       Help users&nbsp;
-      <strong>avoid and correct mistakes</strong>
-      .
+      <strong>avoid and correct mistakes</strong>.
     </li>
   </ul>
   <h2><strong>4. Robust:</strong></h2>
@@ -150,7 +144,6 @@ permalink: "accessibility.html"
   can direct your request to our&nbsp;
   <a
     href="mailto:info.eservices@state.ca.gov?subject=I%20need%20assistance%20from%20CA.gov">
-    Webmaster
-  </a>
-  .
+    Webmaster </a
+  >.
 </p>
