--- a/pages/sample/eleventy.html
+++ b/pages/sample/eleventy.html
@@ -290,9 +290,8 @@ layout: page.njk
       visit the
       <a
         href="https://github.com/Office-of-Digital-Services/California-State-Web-Template-Website/">
-        State Web Template website Github repository
-      </a>
-      .
+        State Web Template website Github repository </a
+      >.
     </p>
 
     <h2>Folder structure and files</h2>
