--- a/pages/sample/implementation-steps.html
+++ b/pages/sample/implementation-steps.html
@@ -21,12 +21,8 @@ permalink: "/get-started/implementation-steps.html"
           <a href="/get-started/implementation-steps.html" class="active">
             Implementation roadmap
           </a>
-          <a href="/get-started/npm.html">
-            NPM package
-          </a>
-          <a href="/cdn.html">
-            Content delivery network (CDN)
-          </a>
+          <a href="/get-started/npm.html"> NPM package </a>
+          <a href="/cdn.html"> Content delivery network (CDN) </a>
         </li>
       </ul>
     </nav>
@@ -64,9 +60,8 @@ permalink: "/get-started/implementation-steps.html"
             need to do. You can also learn how to do a
             <a
               href="https://docs.github.com/en/pull-requests/committing-changes-to-your-project/viewing-and-comparing-commits/comparing-commits">
-              code comparison in GitHub
-            </a>
-            .
+              code comparison in GitHub </a
+            >.
           </p>
         </span>
       </li>
@@ -183,7 +178,8 @@ permalink: "/get-started/implementation-steps.html"
           <p>
             From your code comparison, make the necessary changes and updates to
             your code. Usually, incremental versions will not require any
-            structural template adjustments. You only need to replace core CSS and JS files via NPM install or update the CDN links.
+            structural template adjustments. You only need to replace core CSS
+            and JS files via NPM install or update the CDN links.
           </p>
         </span>
       </li>
