updated gray color cards

--- a/pages/sample/color.html
+++ b/pages/sample/color.html
@@ -96,7 +96,7 @@ permalink: "visual-design/color.html"
       This allows you to have more design flexibility.
     </p>
     <div class="row">
-      <div class="col-md-2">
+      <div class="col-md-2 col-6 m-t-md">
         <div class="text-center p-t-3">
           <div
             class="bg-white-color rounded-50x palette-disc m-x-a brd-solid-1 brd-gray-200 mx-auto"></div>
@@ -105,7 +105,7 @@ permalink: "visual-design/color.html"
           </p>
         </div>
       </div>
-      <div class="col-md-2">
+      <div class="col-md-2 col-6 m-t-md">
         <div class="text-center p-t-3">
           <div class="bg-gray-50 rounded-50x palette-disc  mx-auto"></div>
           <p class="font-size-sm m-t-sm">
@@ -113,7 +113,7 @@ permalink: "visual-design/color.html"
           </p>
         </div>
       </div>
-      <div class="col-md-2">
+      <div class="col-md-2 col-6 m-t-md">
         <div class="text-center p-t-3">
           <div class="bg-gray-100 rounded-50x palette-disc  mx-auto"></div>
           <p class="font-size-sm m-t-sm">
@@ -121,7 +121,7 @@ permalink: "visual-design/color.html"
           </p>
         </div>
       </div>
-      <div class="col-md-2">
+      <div class="col-md-2 col-6 m-t-md">
         <div class="text-center p-t-3">
           <div class="bg-gray-200 rounded-50x palette-disc  mx-auto"></div>
           <p class="font-size-sm m-t-sm">
@@ -129,7 +129,7 @@ permalink: "visual-design/color.html"
           </p>
         </div>
       </div>
-      <div class="col-md-2">
+      <div class="col-md-2 col-6 m-t-md">
         <div class="text-center p-t-3">
           <div class="bg-gray-300 rounded-50x palette-disc  mx-auto"></div>
           <p class="font-size-sm m-t-sm">
@@ -137,7 +137,7 @@ permalink: "visual-design/color.html"
           </p>
         </div>
       </div>
-      <div class="col-md-2">
+      <div class="col-md-2 col-6 m-t-md">
         <div class="text-center p-t-3">
           <div class="bg-gray-400 rounded-50x palette-disc  mx-auto"></div>
           <p class="font-size-sm m-t-sm">
@@ -148,7 +148,7 @@ permalink: "visual-design/color.html"
     </div>
 
     <div class="row m-t">
-      <div class="col-md-2">
+      <div class="col-md-2 col-6 m-t-md">
         <div class="text-center p-t-3">
           <div class="bg-gray-500 rounded-50x palette-disc  mx-auto"></div>
           <p class="font-size-sm m-t-sm">
@@ -156,7 +156,7 @@ permalink: "visual-design/color.html"
           </p>
         </div>
       </div>
-      <div class="col-md-2">
+      <div class="col-md-2 col-6 m-t-md">
         <div class="text-center p-t-3">
           <div class="bg-gray-600 rounded-50x palette-disc  mx-auto"></div>
           <p class="font-size-sm m-t-sm">
@@ -164,7 +164,7 @@ permalink: "visual-design/color.html"
           </p>
         </div>
       </div>
-      <div class="col-md-2">
+      <div class="col-md-2 col-6 m-t-md">
         <div class="text-center p-t-3">
           <div class="bg-gray-700 rounded-50x palette-disc  mx-auto"></div>
           <p class="font-size-sm m-t-sm">
@@ -172,7 +172,7 @@ permalink: "visual-design/color.html"
           </p>
         </div>
       </div>
-      <div class="col-md-2">
+      <div class="col-md-2 col-6 m-t-md">
         <div class="text-center p-t-3">
           <div class="bg-gray-800 rounded-50x palette-disc  mx-auto"></div>
           <p class="font-size-sm m-t-sm">
@@ -180,7 +180,7 @@ permalink: "visual-design/color.html"
           </p>
         </div>
       </div>
-      <div class="col-md-2">
+      <div class="col-md-2 col-6 m-t-md">
         <div class="text-center p-t-3">
           <div class="bg-gray-900 rounded-50x palette-disc  mx-auto"></div>
           <p class="font-size-sm m-t-sm">
@@ -188,7 +188,7 @@ permalink: "visual-design/color.html"
           </p>
         </div>
       </div>
-      <div class="col-md-2">
+      <div class="col-md-2 col-6 m-t-md">
         <div class="text-center p-t-3">
           <div class="bg-black rounded-50x palette-disc  mx-auto"></div>
           <p class="font-size-sm m-t-sm">
