--- a/pages/accessibility.html
+++ b/pages/accessibility.html
@@ -128,7 +128,7 @@ permalink: "accessibility.html"
     </a>
   </li>
   <li>
-    <a href="https://www.dol.gov/general/topic/disability/ada">
+    <a href="https://www.ada.gov/resources/web-guidance/">
       Americans with Disabilities Act Notice
     </a>
   </li>
