--- a/pages/sample/form-elements.html
+++ b/pages/sample/form-elements.html
@@ -28,7 +28,7 @@ permalink: "components/form-elements.html"
   }
 </style>
 
-<h1 class="m-t-0">Forms elements</h1>
+<h1 class="m-t-0">Form elements</h1>
 
 <nav class="page-navigation"></nav>
 
