web standards link

--- a/pages/whats-new.html
+++ b/pages/whats-new.html
@@ -36,12 +36,16 @@ permalink: "whats-new.html"
     <nav class="page-navigation"></nav>
 
     <p>
-      Version 6 of the State Web Template has a new look and feel. V6 sets a modern digital standard that aligns with the 
-      <a href="https://designsystem.webstandards.ca.gov/">California Design System</a>.
+      Version 6 of the State Web Template has a new look and feel. V6 sets a
+      modern digital standard that aligns with California's latest
+      <a href="https://webstandards.ca.gov/">Web Standards</a>.
     </p>
     <h2>New patterns section</h2>
     <p>
-      Content patterns are a brand new addition to the State Web Template. Patterns are reusable combinations of components that solve common user problems. These best practices help users achieve their goals and ease consistency across experiences.
+      Content patterns are a brand new addition to the State Web Template.
+      Patterns are reusable combinations of components that solve common user
+      problems. These best practices help users achieve their goals and ease
+      consistency across experiences.
     </p>
 
     <h2>Code</h2>
@@ -67,7 +71,9 @@ permalink: "whats-new.html"
 
     <h2>Navigation</h2>
     <p>
-      Now, it’s easier for people to find what they need. We improved our navigation and have new side navigation. Some of these improvements include:
+      Now, it’s easier for people to find what they need. We improved our
+      navigation and have new side navigation. Some of these improvements
+      include:
     </p>
     <ul>
       <li>
@@ -133,18 +139,25 @@ permalink: "whats-new.html"
 
     <h2>Helpful content</h2>
     <p>
-      The website content was completely rewritten and expanded. The content focuses on usability and plain language. These updates include:
+      The website content was completely rewritten and expanded. The content
+      focuses on usability and plain language. These updates include:
     </p>
     <ul>
       <li>Usage guidelines for all components and patterns.</li>
       <li>Links to content and design style guides from the Design System.</li>
       <li>Helpful placeholder content for component examples.</li>
       <li>Improved homepage content.</li>
-      <li>A What’s new page that details technical and non-technical changes.</li>
+      <li>
+        A What’s new page that details technical and non-technical changes.
+      </li>
     </ul>
     <p>Version 6 improves user experience and navigation through the site.</p>
-    <p>These content and design improvements should help all members of your digital teams.</p>
-    <p>Find a complete change log on our
+    <p>
+      These content and design improvements should help all members of your
+      digital teams.
+    </p>
+    <p>
+      Find a complete change log on our
       <a
         href="https://github.com/Office-of-Digital-Services/California-State-Web-Template-HTML/releases">
         GitHub production release page
