--- a/pages/template-updates.html
+++ b/pages/template-updates.html
@@ -38,19 +38,23 @@ permalink: "template-updates.html"
         <ul class="font-size-16">
           <li>Fixed Safari 16.5 support issues.</li>
           <li>
-            Adding lang code for "On this page" component for improved
-            accessibility.
-          </li>
-          <li>
-            Multiple fixes to prevent "Forced Reflow" issues affecting
+            Multiple fixes to prevent "Forced reflow" issues affecting
             performance.
           </li>
           <li>
             Replaced "featured search" component with updated functionality.
           </li>
+          <li>
+            Adding lang code for "On this page" component for improved
+            accessibility.
+          </li>
           <li>Updated subnav carrot for improved accessibility.</li>
+          <li>Fixed page-navigation anchor link auto scroll</li>
           <li>Fixed issue with multiple alert banners and sticky header.</li>
           <li>Fixed side navigation hover color contrast issue in mobile</li>
+          <li>Fixed the display of alert-dismissible banners</li>
+          <li>Fixed gray-500 class</li>
+          <li>Update to Bootstrap 5.3.8</li>
         </ul>
       </td>
     </tr>
