--- a/pages/sample/structure-footer.html
+++ b/pages/sample/structure-footer.html
@@ -75,7 +75,7 @@ permalink: "structure/footer.html"
           <li>Twitter</li>
           <li>Instagram</li>
           <li>YouTube</li>
-          <li>Github</li>
+          <li>GitHub</li>
           <li>LinkedIn</li>
           <li>Email</li>
         </ul>
