--- a/pages/sample/eleventy.html
+++ b/pages/sample/eleventy.html
@@ -290,7 +290,7 @@ layout: page.njk
       visit the
       <a
         href="https://github.com/Office-of-Digital-Services/California-State-Web-Template-Website/">
-        State Web Template website Github repository </a
+        State Web Template website GitHub repository </a
       >.
     </p>
 
