--- a/pages/sample/structure-site-navigation.html
+++ b/pages/sample/structure-site-navigation.html
@@ -427,7 +427,7 @@ permalink: "structure/site-navigation.html"
               <code>flex</code>
               will ensure equal inline distribution of
               <code>a</code>
-              sub-navigation items iside of
+              sub-navigation items inside of
               <code>.second-level-nav</code>
               div.
             </p>
