--- a/pages/sample/implementation-steps.html
+++ b/pages/sample/implementation-steps.html
@@ -156,7 +156,7 @@ permalink: "/get-started/implementation-steps.html"
             <li>
               <span class="bold">NPM route</span><br />
               You can install the core State Web Template NPM package on your
-              project (if your project is supporting node.js setup). You can
+              project (if your project is supporting Node.js setup). You can
               find NPM guidance and more Information on the
               <a href="/get-started/npm.html">State Web Template NPM</a> page.
             </li>
