--- a/pages/whats-new.html
+++ b/pages/whats-new.html
@@ -59,7 +59,7 @@ permalink: "whats-new.html"
         Replacing server-side includes (SSI) with njk includes and templates.
       </li>
       <li>
-        Using json files and eleventy logic to generate side navigation and
+        Using JSON files and Eleventy logic to generate side navigation and
         breadcrumbs.
       </li>
       <li>
