--- a/pages/sample/alert.html
+++ b/pages/sample/alert.html
@@ -270,7 +270,7 @@ permalink: "components/alert.html"
         <h3 class="h4">For Eleventy users</h3>
         Add the alert key with the path to your alert html file
         <code>alert: " ../modules/alert-banner.html"</code>
-        after your eleventy layout key declaration in the front matter data on
+        after your Eleventy layout key declaration in the front matter data on
         your page.
         <pre>
 ---
