--- a/pages/sample/eleventy.html
+++ b/pages/sample/eleventy.html
@@ -235,7 +235,7 @@ customjs: ["/js/libs/your-script-1.js", "/js/libs/your-script-2.js"]
     <h4>Page layout options</h4>
 
     <p>
-      State Web Template eleventy page generation codebase uses several layout
+      State Web Template Eleventy page generation codebase uses several layout
       page options.
     </p>
 
