--- a/pages/sample/get-started-npm.html
+++ b/pages/sample/get-started-npm.html
@@ -43,7 +43,7 @@ permalink: "/get-started/npm.html"
     <h2>How this works</h2>
     <p>
       The NPM package can be used by multiple frameworks such as React, .NET,
-      eleventy, and others.
+      Eleventy, and others.
     </p>
 
     <h3>React</h3>
