--- a/pages/template-updates.html
+++ b/pages/template-updates.html
@@ -344,7 +344,7 @@ permalink: "template-updates.html"
       <td>
         <ul class="font-size-16">
           <li>
-            Updated site structure and framework to use eleventy site generation
+            Updated site structure and framework to use Eleventy site generation
             and replaced server site includes with njk includes and templates
           </li>
           <li>
