--- a/pages/whats-new.html
+++ b/pages/whats-new.html
@@ -54,7 +54,7 @@ permalink: "whats-new.html"
       framework. These updates include:
     </p>
     <ul>
-      <li>Rebuilding the framework to use eleventy site generation.</li>
+      <li>Rebuilding the framework to use Eleventy site generation.</li>
       <li>
         Replacing server-side includes (SSI) with njk includes and templates.
       </li>
