--- a/pages/sample/countdown-timer.html
+++ b/pages/sample/countdown-timer.html
@@ -228,7 +228,7 @@ permalink: "components/countdown-timer.html"
             // Update the count down every 1 second
             var x = setInterval(function () {
 
-             // Get todays date and time
+             // Get today's date and time
              var now = new Date().getTime();
 
              // Find the distance between now an the count down date
@@ -291,7 +291,7 @@ permalink: "components/countdown-timer.html"
          // Update the count down every 1 second
          var x = setInterval(function () {
 
-          // Get todays date and time
+          // Get today's date and time
           var now = new Date().getTime();
 
           // Find the distance between now an the count down date
@@ -361,7 +361,7 @@ permalink: "components/countdown-timer.html"
   // Update the count down every 1 second
   var x = setInterval(function () {
 
-   // Get todays date and time
+   // Get today's date and time
    var now = new Date().getTime();
 
    // Find the distance between now an the count down date
