Updated structure page

--- a/pages/structure.html
+++ b/pages/structure.html
@@ -31,7 +31,9 @@ permalink: "structure.html"
     <nav class="page-navigation"></nav>
 
     <p class="lead">
-      Structural components form the basic structure of a website that uses the State Web Template. This structure contains elements that connect the web pages together.
+      Structural components form the basic structure of a website that uses the
+      State Web Template. This structure contains elements that connect the web
+      pages together.
     </p>
     <h2>Webpage structure</h2>
     <p>There are six main structural components in the State Web Template.</p>
@@ -122,39 +124,55 @@ permalink: "structure.html"
             <div class="card-body">
               <pre
                 class="copy-code"><span class="text-success">&lt;!doctype html&gt;</span>
-                <span class="text-accent-p2">&lt;html</span> <span class="text-info">lang=</span><span class="text-accent7">"en"</span><span class="text-accent-p2">&gt;</span>
-                <span class="text-accent-p2">&lt;head&gt;</span>
-                   <span class="text-accent-p2">&lt;meta </span><span class="text-info">charset=</span><span class="text-accent7">"utf-8"</span><span class="text-accent-p2">&gt;</span>
-                   <span class="text-accent-p2">&lt;title&gt;</span>State Template<span class="text-accent-p2">&lt;/title&gt;</span>
-                   <span class="text-accent-p2">&lt;meta</span> <span class="text-info">name=</span><span class="text-accent7">"Author"</span> <span class="text-info">content=</span><span class="text-accent7">"State of California"</span><span class="text-accent-p2"> /&gt;</span>
-                   <span class="text-accent-p2">&lt;meta</span> <span class="text-info">name=</span><span class="text-accent7">"Description"</span> <span class="text-info">content=</span><span class="text-accent7">"State of California"</span><span class="text-accent-p2"> /&gt;</span>
-                   <span class="text-accent-p2">&lt;meta</span> <span class="text-info">name=</span><span class="text-accent7">"Keywords"</span> <span class="text-info">content=</span><span class="text-accent7">"California, government"</span><span class="text-accent-p2"> /&gt;</span>
-                   <span class="text-success">&#10100;% include "/src/_includes/head-css-js.njk" %&#10101;</span>
-               <span class="text-accent-p2">&lt;/head&gt;</span>
-               <span class="text-accent-p2">&lt;body&gt;</span>
-                  <span class="text-accent-p2">&lt;header</span> <span class="text-info">role=</span><span class="text-accent7">"banner"</span> <span class="text-info">id=</span><span class="text-accent7">"header"</span> <span class="text-info">class=</span><span class="text-accent7">"global-header fixed"</span><span class="text-accent-p2">&gt;</span>
-                  <span class="text-accent-p2">&lt;div</span> <span class="text-info">id=</span><span class="text-accent7">"skip-to-content"</span><span class="text-accent-p2">&gt;&lt;a </span><span class="text-info">href=</span><span class="text-accent7">"#main-content"</span><span class="text-accent-p2">&gt;</span>Skip to Main Content<span class="text-accent-p2">&lt;/a&gt;&lt;/div&gt;</span>
-                  <span class="text-success">&#10100;% include "/src/_includes/utility-header.njk" %&#10101;</span>
-                  <span class="text-success">&#10100;% include "/src/_includes/site-header.njk" %&#10101;</span>
-                  <span class="text-success">&#10100;% include "/src/_includes/mobile-controls.njk" %&#10101;</span>
-                  <span class="text-accent-p2">&lt;div</span> <span class="text-info">class=</span><span class="text-accent7">"navigation-search full-width-nav container"</span><span class="text-accent-p2">&gt;</span>
-                    <span class="text-accent-p2">&lt;div</span> <span class="text-info">id=</span><span class="text-accent7">"head-search"</span> <span class="text-info">class=</span><span class="text-accent7">"search-container search-container featured-search"</span><span class="text-accent-p2">&gt;</span>
-                    <span class="text-success">&#10100;% include "/src/_includes/search.njk" %&#10101;</span>
-                    <span class="text-accent-p2">&lt;/div&gt;</span>
-                        <span class="text-success">&#10100;% include "/src/_includes/navigation.njk" %&#10101;</span>
-                     <span class="text-accent-p2">&lt;/div&gt;</span>
-                   <span class="text-accent-p2">&lt;/header&gt;</span>
-                   <span class="text-accent-p2">&lt;div</span> <span class="text-info">id=</span><span class="text-accent7">"main-content"</span> <span class="text-info">class=</span><span class="text-accent7">"main-content"</span><span class="text-accent-p2">&gt;</span>
-                       <span class="text-accent-p2">&lt;div </span><span class="text-info">class=</span><span class="text-accent7">"container"</span><span class="text-accent-p2">&gt;</span>
-                           <span class="text-accent-p2">&lt;main </span><span class="text-info">class=</span><span class="text-accent7">"main-primary"</span><span class="text-accent-p2">&gt;</span>
-                              Page content
-                           <span class="text-accent-p2">&lt;/main&gt;</span>
-                      <span class="text-accent-p2">&lt;/div&gt;</span>
-                  <span class="text-accent-p2">&lt;/div&gt;</span>
-                  <span class="text-success">&#10100;% include "/src/_includes/global-footer.njk" %&#10101;</span>
-                  <span class="text-success">&#10100;% include "/src/_includes/scripts.njk" %&#10101;</span>
-               <span class="text-accent-p2">&lt;/body&gt;</span>
-             <span class="text-accent-p2">&lt;/html&gt;</span>
+  <span class="text-accent-p2">&lt;html</span> <span class="text-info">lang=</span><span class="text-accent7">"en"</span><span class="text-accent-p2">&gt;</span>
+  <span class="text-accent-p2">&lt;head&gt;</span>
+    <span class="text-accent-p2">&lt;meta </span><span class="text-info">charset=</span><span class="text-accent7">"utf-8"</span><span class="text-accent-p2">&gt;</span>
+    <span class="text-accent-p2">&lt;meta</span> <span class="text-info">name=</span><span class="text-accent7">"HandheldFriendly"</span> <span class="text-info">content=</span><span class="text-accent7">"True"</span> <span class="text-accent-p2">/&gt;</span>
+    <span class="text-accent-p2">&lt;meta</span> <span class="text-info">name=</span><span class="text-accent7">"MobileOptimized"</span> <span class="text-info">content=</span><span class="text-accent7">"320"</span> <span class="text-accent-p2">/&gt;</span>
+    <span class="text-accent-p2">&lt;meta</span> <span class="text-info">name=</span><span class="text-accent7">"viewport"</span> <span class="text-info">content=</span><span class="text-accent7">"width=device-width, initial-scale=1.0, minimum-scale=1.0"</span> <span class="text-accent-p2">/&gt;</span>
+      
+    <span class="text-accent-p2">&lt;title&gt;</span>State Template<span class="text-accent-p2">&lt;/title&gt;</span>
+    <span class="text-accent-p2">&lt;meta</span> <span class="text-info">name=</span><span class="text-accent7">"Author"</span> <span class="text-info">content=</span><span class="text-accent7">"State of California"</span><span class="text-accent-p2"> /&gt;</span>
+    <span class="text-accent-p2">&lt;meta</span> <span class="text-info">name=</span><span class="text-accent7">"Description"</span> <span class="text-info">content=</span><span class="text-accent7">"State of California"</span><span class="text-accent-p2"> /&gt;</span>
+    <span class="text-accent-p2">&lt;meta</span> <span class="text-info">name=</span><span class="text-accent7">"Keywords"</span> <span class="text-info">content=</span><span class="text-accent7">"California, government"</span><span class="text-accent-p2"> /&gt;</span>
+      
+    <span class="text-success">&lt;--Site favicon--&gt;</span>
+    <span class="text-accent-p2">&lt;link</span> <span class="text-info">rel=</span><span class="text-accent7">"shortcut icon"</span> <span class="text-info">href=</span><span class="text-accent7">"/favicon.ico"</span> <span class="text-accent-p2">/&gt;</span>
+
+    <span class="text-success">&lt;--Font preconnect--&gt;</span>
+    <span class="text-accent-p2">&lt;link</span> <span class="text-info">rel=</span><span class="text-accent7">"preconnect"</span> <span class="text-info">href=</span><span class="text-accent7">"https://fonts.googleapis.com"</span> <span class="text-accent-p2">/&gt;</span>
+    <span class="text-accent-p2">&lt;link</span> <span class="text-info">rel=</span><span class="text-accent7">"preconnect"</span> <span class="text-info">href=</span><span class="text-accent7">"https://fonts.gstatic.com"</span> <span class="text-info">crossorigin</span> <span class="text-accent-p2">/&gt;</span>
+    <span class="text-accent-p2">&lt;link</span> <span class="text-info">href=</span><span class="text-accent7">"https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&display=block"</span> <span class="text-info">rel=</span><span class="text-accent7">"stylesheet"</span> <span class="text-accent-p2">/&gt;</span>
+
+    <span class="text-success">&lt;--State Template core files--&gt;</span>
+    <span class="text-accent-p2">&lt;link</span> <span class="text-info">rel=</span><span class="text-accent7">"stylesheet"</span> <span class="text-info">href=</span><span class="text-accent7">"/state-template/css/cagov.core.min.css"</span> <span class="text-accent-p2">/&gt;</span>
+    <span class="text-accent-p2">&lt;script</span> <span class="text-info">type=</span><span class="text-accent7">"text/javascript"</span> <span class="text-info">src=</span><span class="text-accent7">"/state-template/js/cagov.core.min.js"</span> <span class="text-info">defer</span><span class="text-accent-p2">&gt;</span><span class="text-accent-p2">&lt;/script&gt;</span>
+
+    <span class="text-success">&lt;--Google analytics code goes here--&gt;</span>
+  <span class="text-accent-p2">&lt;/head&gt;</span>
+  <span class="text-accent-p2">&lt;body&gt;</span>
+    <span class="text-accent-p2">&lt;header</span> <span class="text-info">role=</span><span class="text-accent7">"banner"</span> <span class="text-info">id=</span><span class="text-accent7">"header"</span> <span class="text-info">class=</span><span class="text-accent7">"global-header fixed"</span><span class="text-accent-p2">&gt;</span>
+    <span class="text-accent-p2">&lt;div</span> <span class="text-info">id=</span><span class="text-accent7">"skip-to-content"</span><span class="text-accent-p2">&gt;&lt;a </span><span class="text-info">href=</span><span class="text-accent7">"#main-content"</span><span class="text-accent-p2">&gt;</span>Skip to Main Content<span class="text-accent-p2">&lt;/a&gt;&lt;/div&gt;</span>
+    <span class="text-success">&lt;--Utility header component code goes here--&gt;</span>
+    <span class="text-success">&lt;--Site header component code goes here--&gt;</span>
+    <span class="text-success">&lt;--Mobile controls component code goes here--&gt;</span>
+    <span class="text-accent-p2">&lt;div</span> <span class="text-info">class=</span><span class="text-accent7">"navigation-search full-width-nav container"</span><span class="text-accent-p2">&gt;</span>
+      <span class="text-accent-p2">&lt;div</span> <span class="text-info">id=</span><span class="text-accent7">"head-search"</span> <span class="text-info">class=</span><span class="text-accent7">"search-container search-container featured-search"</span><span class="text-accent-p2">&gt;</span>
+      <span class="text-success">&lt;--Google search component code goes here--&gt;</span>
+      <span class="text-accent-p2">&lt;/div&gt;</span>
+          <span class="text-success">&lt;--Site navigation component code goes here--&gt;</span>
+        <span class="text-accent-p2">&lt;/div&gt;</span>
+      <span class="text-accent-p2">&lt;/header&gt;</span>
+      <span class="text-accent-p2">&lt;div</span> <span class="text-info">id=</span><span class="text-accent7">"main-content"</span> <span class="text-info">class=</span><span class="text-accent7">"main-content"</span><span class="text-accent-p2">&gt;</span>
+          <span class="text-accent-p2">&lt;div </span><span class="text-info">class=</span><span class="text-accent7">"container"</span><span class="text-accent-p2">&gt;</span>
+              <span class="text-accent-p2">&lt;main </span><span class="text-info">class=</span><span class="text-accent7">"main-primary"</span><span class="text-accent-p2">&gt;</span>
+                Page content
+              <span class="text-accent-p2">&lt;/main&gt;</span>
+        <span class="text-accent-p2">&lt;/div&gt;</span>
+    <span class="text-accent-p2">&lt;/div&gt;</span>
+    <span class="text-success">&lt;--Footer component code goes here--&gt;</span>
+  <span class="text-accent-p2">&lt;/body&gt;</span>
+<span class="text-accent-p2">&lt;/html&gt;</span>
          </pre>
             </div>
           </div>
