updated utility classes

--- a/pages/sample/css-utility-css-classes.html
+++ b/pages/sample/css-utility-css-classes.html
@@ -512,6 +512,52 @@ permalink: "get-started/css-classes-shortcuts/utility-css-classes.html"
                   theme's lightest secondary color radial gradient background
                 </td>
               </tr>
+              <tr>
+                <td><code>.section-default</code></td>
+                <td>Default section background color (gray-50: #fafafa)</td>
+              </tr>
+              <tr>
+                <td><code>.section-understated</code></td>
+                <td>
+                  Understated section background class is using the secondary 1
+                  color as a background.
+                </td>
+              </tr>
+              <tr>
+                <td><code>.section-overstated</code></td>
+                <td>
+                  Overstated section background class is using the primary color
+                  as a background and white for text.
+                </td>
+              </tr>
+              <tr>
+                <td><code>.section-primary</code></td>
+                <td>
+                  Primary section background class is using the primary color as
+                  a background and white for text.
+                </td>
+              </tr>
+              <tr>
+                <td><code>.section-standout</code></td>
+                <td>
+                  Standout section background class is using the standout color
+                  as a background and white for text.
+                </td>
+              </tr>
+              <tr>
+                <td><code>.section-impact</code></td>
+                <td>
+                  Impact section background class is using the standout color as
+                  a background and white for text.
+                </td>
+              </tr>
+              <tr>
+                <td><code>.section-inverted</code></td>
+                <td>
+                  Inverted section background class is using the gray-900
+                  (#3b3a48) color as a background and white for text.
+                </td>
+              </tr>
             </tbody>
           </table>
         </div>
